--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,27 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
-    url: '#about'
+  - name: À propos
+    url: '#apropos'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
-  - name: Projects
-    url: '#projects'
+  - name: Parcours
+    url: '#parcours'
     weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Compétences
+    url: '#competences'
+    weight: 20
+  - name: Carnet
+    url: '#carnet'
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
+  # - name: Présent
+  #   url: '#present'
+  #   weight: 30
+  #  - name: Parcours
+  #    url: '#parcours'
+  #   weight: 40
   - name: Contact
     url: '#contact'
-    weight: 60
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
