Update config and params

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -8,29 +8,30 @@ fr:
   # contentDir: content
 
 # Uncomment the lines below to configure your website in a second language.
-en:
-  languageCode: en-us
-  contentDir: content/en
+
+# en:
+#   languageCode: en-us
+#   contentDir: content/en
   # title: Jérémy Garniaux, geographer, mapmaker & developer
-  params:
-    description:
-  menu:
-    main:
-    - name: Home
-      url: '#about'
-      weight: 10
-    - name: Blog
-      url: '#blog'
-      weight: 20
-    - name: Present
-      url: '#present'
-      weight: 30
-    - name: Past
-      url: '#past'
-      weight: 40
-    - name: Contact
-      url: '#contact'
-      weight: 50
+  # params:
+  #   description:
+  # menu:
+  #   main:
+  #   - name: Home
+  #     url: '#about'
+  #     weight: 10
+  #   - name: Blog
+  #     url: '#blog'
+  #     weight: 20
+  #   - name: Present
+  #     url: '#present'
+  #     weight: 30
+  #   - name: Past
+  #     url: '#past'
+  #     weight: 40
+  #   - name: Contact
+  #     url: '#contact'
+  #     weight: 50
 
 #zh:
 #  languageCode: zh-Hans
