--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -53,7 +53,7 @@ footer:
 locale:
   date_format: 'Jan 2, 2006'
   time_format: '3:04 PM'
-  address_format: en-us
+  address_format: fr-fr
 
 # Site features
 
@@ -70,7 +70,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/mapperfr/mapperfr-source'
     content_dir: content
     branch: master
   avatar:
