--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -62,7 +62,7 @@ features:
     enable: true
     extra_languages:
       - r
-      - latex
+      - python
   math:
     enable: false
   diagram:
