--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -44,9 +44,9 @@ footer:
     notice: '© {year} Jérémy Garniaux. Contenu disponible sous licence {license}'
     license:
       enable: true
-      allow_derivatives: true
+      allow_derivatives: false
       share_alike: true
-      allow_commercial: false
+      allow_commercial: true
 
 # Localization
 
