--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,6 +19,9 @@ main:
   - name: Contact
     url: '#contact'
     weight: 40
+  - name: Slides
+    url: '#slides'
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
