--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -13,12 +13,12 @@ main:
   - name: Resume
     url: '#resume'
     weight: 20
-  - name: Blog
-    url: '#blog'
-    weight: 30
+  # - name: Blog
+  #   url: '#blog'
+  #   weight: 30
   - name: Contact
     url: '#contact'
-    weight: 40
+    weight: 30
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
