--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -16,9 +16,12 @@ main:
   # - name: Blog
   #   url: '#blog'
   #   weight: 30
+  - name: Slides
+    url: '#slides'
+    weight: 30
   - name: Contact
     url: '#contact'
-    weight: 30
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
