--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -44,7 +44,7 @@ footer:
     notice: '© {year} Jérémy Garniaux. Contenu disponible sous licence {license}'
     license:
       enable: true
-      allow_derivatives: false
+      allow_derivatives: true
       share_alike: true
       allow_commercial: true
 
