--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -13,9 +13,9 @@ main:
   - name: Resume
     url: '#resume'
     weight: 20
-  # - name: Blog
-  #   url: '#blog'
-  #   weight: 30
+  - name: Blog
+    url: '#blog'
+    weight: 30
   - name: Slides
     url: '#slides'
     weight: 30
