--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -13,11 +13,11 @@ main:
   - name: Resume
     url: '#resume'
     weight: 20
-  - name: Blog
-    url: '#blog'
-    weight: 30
-  - name: Slides
-    url: '#slides'
+  # - name: Blog
+  #   url: '#blog'
+  #   weight: 30
+  # - name: Slides
+  #   url: '#slides'
     weight: 30
   - name: Contact
     url: '#contact'
