--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -13,12 +13,12 @@ main:
   - name: Resume
     url: '#resume'
     weight: 20
-  # - name: Blog
-  #   url: '#blog'
-  #   weight: 30
+  - name: Carnet  
+    url: '#carnet'
+    weight: 30
   # - name: Slides
   #   url: '#slides'
-    weight: 30
+  #   weight: 30
   - name: Contact
     url: '#contact'
     weight: 40
