--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -13,8 +13,8 @@ main:
   - name: Resume
     url: '#resume'
     weight: 20
-  - name: Carnet  
-    url: '#carnet'
+  - name: Blog  
+    url: '#blog'
     weight: 30
   # - name: Slides
   #   url: '#slides'
