add portfolio to menus.yaml and to content

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Parcours
     url: '#parcours'
     weight: 20
+  - name: Portfolio
+    url: '#portfolio'
+    weight: 25
   - name: Carnet
     url: '#carnet'
     weight: 30
