--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.114.1"
+  HUGO_VERSION = ""
   HUGO_ENABLEGITINFO = "false"
 
 [context.production.environment]
