--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: 'Mapper'
-    description: 'Site personnel de Jérémy Garniaux, cartographe et développeur.'
+    description: 'Site personnel de Jérémy Garniaux, géographe, cartographe & développeur.'
     twitter: 'mapperfr'
   analytics:
     google_analytics: ''
