fix en site title

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -12,7 +12,7 @@ fr:
 en:
   languageCode: en-us
   contentDir: content/en
-  title: Mapper.Fr
+  title: mapper.fr
   params:
     description: Personal website of Jérémy Garniaux, geographer, mapmaker & developer.
   menu:
