--- a/data/page_sharer.toml
+++ b/data/page_sharer.toml
@@ -2,28 +2,20 @@
 # Documentation: https://sourcethemes.com/academic/docs/customization/#page-sharer
 
 [[buttons]]
-  id = "twitter"
-  url = "https://twitter.com/intent/tweet?url={url}&text={title}"
-  title = "Twitter"
-  icon_pack = "fab"
-  icon = "twitter"
-  enable = true
-
-[[buttons]]
-  id = "facebook"
-  url = "https://www.facebook.com/sharer.php?u={url}&t={title}"
-  title = "Facebook"
-  icon_pack = "fab"
-  icon = "facebook"
-  enable = true
-
-[[buttons]]
   id = "email"
   url = "mailto:?subject={title}&body={url}"
   title = "Email"
   icon_pack = "fas"
   icon = "envelope"
   enable = true
+
+[[buttons]]
+  id = "mastodon"
+  url = "https://mastodonshare.com/?url={url}&text={title}" 
+  title = "Mastodon"
+  icon_pack = "fab"
+  icon = "mastodon"
+  enable = "true"
 
 [[buttons]]
   id = "linkedin"
@@ -34,12 +26,28 @@
   enable = true
 
 [[buttons]]
+  id = "facebook"
+  url = "https://www.facebook.com/sharer.php?u={url}&t={title}"
+  title = "Facebook"
+  icon_pack = "fab"
+  icon = "facebook"
+  enable = false
+
+[[buttons]]
+  id = "twitter"
+  url = "https://twitter.com/intent/tweet?url={url}&text={title}"
+  title = "Twitter"
+  icon_pack = "fab"
+  icon = "twitter"
+  enable = false
+
+[[buttons]]
   id = "whatsapp"
   url = "whatsapp://send?text={title}%20{url}"
   title = "WhatsApp"
   icon_pack = "fab"
   icon = "whatsapp"
-  enable = true
+  enable = false
 
 [[buttons]]
   id = "weibo"
@@ -47,7 +55,7 @@
   title = "Weibo"
   icon_pack = "fab"
   icon = "weibo"
-  enable = true
+  enable = false
 
 [[buttons]]
   id = "reddit"
